app/_scss/base/_base-grid.scss
/* BASE GRID */
section,
div,
nav,
article,
header,
footer,
main {
	display: block;
	position: relative;
}
article {
	background: darken(white,1.5%);
}
section {
	z-index: 2;
	background: darken(white,1.5%);

	&:after {
		clear: both;
		display: block;
		font-size: 0;
		line-height: 0;
		visibility: hidden;
		width: 0;
		height: 0;
		content: "";
	}
}

.padded-vertical {
	@include rem(padding-top, 4.65rem);
	@include rem(padding-bottom, 5rem);

	@include breakpoint(landscape) {
		@include rem(padding-top,4rem);
		@include rem(padding-bottom,4.5rem);
	}
	@include breakpoint(portrait) {
		@include rem(padding-top,4rem);
		@include rem(padding-bottom,4.5rem);
	}

	@include breakpoint(mobile) {
		@include rem(padding-top,3rem);
		@include rem(padding-bottom,4rem);
	}
}
.padded-vertical-top {
	@include rem(padding-top, 6.5rem);
	@include rem(padding-bottom, 5rem);
}

.padded-horizontal {
	@include rem(padding-left,5rem);
	@include rem(padding-right,5rem);

	@include breakpoint(landscape) {
		@include rem(padding-left,3rem);
		@include rem(padding-right,3rem);
	}
	@include breakpoint(portrait) {
		@include rem(padding-left,3rem);
		@include rem(padding-right,3rem);
	}
}
.padded-horizontal-medium{
	padding-left: 15%;
	padding-right: 15%;

	@include breakpoint(portrait) {
		padding-left: 9%;
		padding-right: 9%;
	}
}
.padded-horizontal-large {
	padding-left: 23%;
	padding-right: 23%;

	@include breakpoint(portrait) {
		padding-left: 15%;
		padding-right: 15%;
	}
	@include breakpoint(mobile) {
		padding-left: 5%;
		padding-right: 5%;
	}
}

.centered {
	padding-left: 25%;
	padding-right: 25%;

	@include breakpoint(landscape) {
		padding-left: 20%;
		padding-right: 20%;
	}
	@include breakpoint(portrait) {
		padding-left: 15%;
		padding-right: 15%;
	}
}

